--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.1.1"
 psycopg2-binary = "^2.9.9"
 python-dotenv = "^1.0.1"
 black = "^24.10.0"
+pillow = "^10.4.0"
 
 
 [build-system]
