--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ psycopg2-binary = "^2.9.9"
 python-dotenv = "^1.0.1"
 black = "^24.10.0"
 pillow = "^10.4.0"
+ipython = "^8.28.0"
 
 
 [build-system]
